--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -43,11 +43,13 @@ Material Scope
 (d) the offering of a publicly available directory of end-users of electonic communications
     services;
 
-(e) the sending direct marketing communications to end-users.
+(e) the sending of direct marketing communications to end-users.
 
 2. This Regulation does not apply to:
 
-(a) activities concerning national security and defence;
+(a) activities which fall outside the scope of Union law;
+
+(aa) activities concerning national security and defence;
 
 (b) activities of the Member States which fall within the scope of Chapter 2 of Title V of
     the Treaty on European Union;
@@ -57,6 +59,9 @@ Material Scope
 (d) activities of competent authorities for the purposes of the prevention, investigation,
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
+
+(e) electronic communications content processed by the end-users after receipt, or by a
+    third party entrusted by them to record, store or otherwise process such data.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 00/0000 [new Regulation
@@ -95,7 +100,7 @@ Territorial scope and representative
     available directory or the provider of software enabling electronic communications or
     a person using electronic communications services to send direct
     marketing communications or makes use of processing and storage capabilities or
-    collects information processed by or emitted by or sored in the end-users’ terminal
+    collects information processed by or emitted by or stored in the end-users’ terminal
     equipment is not established in the
 
     Union it shall designate in writing a representative in the Union.
@@ -199,6 +204,10 @@ Consent
     permitting electronic communications, including the retrieval and presentation of
     information on the internet.
 
+2a. As far as the controller is not able to identify a data subject, the technical protocol
+    showing that consent was given from the terminal equipment shall be sufficient to
+    demonstrate the consent of the end-user according Article 8 (1) (b).
+
 3. End-users who have consented to the processing of electronic communications data
     as set out in point (c) of Article 6(2) and points (a) and (b) of Article 6(3) shall be
 	reminded of the possibility  to withdraw their consent at periodic
@@ -219,7 +228,7 @@ Confidentiality of electronic communications data
 ```
 Electronic communications data shall be confidential. Any  interference with electronic
     communications data, including listening, tapping, storing, monitoring, scanning or other
-    kinds of interception, surveillance or processing of electronic communications data, by
+    kinds of interception, surveillance and processing of electronic communications data, by
     anyone other than the end-users concerned, shall be prohibited, except when permitted by this
     Regulation.
 
@@ -248,7 +257,7 @@ Permitted processing of electronic communications data
     Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
 (b) it is necessary for performance of the contract to which the end-user is party,
-    to the extent necessary for billing, calculating interconnection payments, detecting or
+    more in particular if for billing, calculating interconnection payments, detecting or
     stopping fraudulent, or abusive use of, or subscription to, electronic communications
     services; or
 
@@ -263,15 +272,15 @@ Permitted processing of electronic communications data
 
 (e) it is necessary for the purpose of statistical counting, provided:
     - that the processing is limited to electronic communications meta-data
-    that constitutes geolocation data that is pseudonymised, 
+    that constitutes location data that is pseudonymised, 
     - the processing could not be carried out by
-    processing information that is made anonymous, and the geolocation data is erased or made
+    processing information that is made anonymous, and the location data is erased or made
     anonymous when it is no longer needed to fulfil the purpose, and 
-    - the geolocation data is not used to determine the nature or
+    - the location data is not used to determine the nature or
     characteristics of an end-user or to build a profile of an end-user.
 
-(f) it is necessary for statistical counting not permitted in
-    accordance with point (e) or for scientific research,  provided it is based on
+(f) it is necessary for statistical counting, other than based on electronic communications
+    metadata that constitute location data or for scientific research,  provided it is based on
     Union or Member State law which shall be proportionate to the aim pursued and
     provide for specific measures, including encryption and pseudonymisation, to
     safeguard fundamental rights and the interest of the end-users. Processing of
@@ -296,10 +305,10 @@ Permitted processing of electronic communications data
     consulted the supervisory authority. Article 36(2) and (3) of Regulation
     (EU) 2016/679 shall apply to the consultation of the supervisory authority.
 
-3a. For the purposes of point (e) of paragraph 2, the provider of the electronic
-    communications service shall:
+3a. For the purposes of point (e) of paragraph 2, the providers of electronic
+    communications networks and services shall:
 
-(a) exclude electronic communications metadata that constitue geolocation data that reveal special categories of
+(a) exclude electronic communications metadata that constitue location data that reveal special categories of
     personal data pursuant to Article 9 of Regulation (EU) 2016/679 from processing;
 
 (b) not share such data with third parties, unless it is made anonymous;
@@ -310,7 +319,7 @@ Permitted processing of electronic communications data
     Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority;
     and
 
-(d) inform the end-user of specific processing on the basis of point (f) of paragraph 2 and
+(d) inform the end-user of specific processing on the basis of point (e) of paragraph 2 and
     give the right to object to such processing.
 
 4. A third party on behalf of a provider of electronic communications network or
@@ -322,12 +331,15 @@ Permitted processing of electronic communications data
 Article 7
 Storage and erasure of electronic communications data
 ```
-1. Without prejudice to point (b) of Article 6(1) and points (a) and (b) of Article 6(3),
+1. Without prejudice to point (b) of Article 6(1) and of Article 6(3),
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
-    communication content by the intended recipient or recipients.
+    communication content by the intended recipient or recipients. Such data may be recorded, stored or otherwise
+    processeed by the end-users after receipt, or by a third party entrusted by them to
+    record, store or otherwise process such data. Such processing shall take place in
+    accordance with Regulation (EU) 2016/679.
 
-2. Without prejudice to point (b) of Article 6(1) and points (a), (c) and (ce) of Article 6(2),
+2. Without prejudice to point (b) of Article 6(1) and points (a), (d) to (f) of Article 6(2),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
@@ -414,7 +426,7 @@ Information and options for privacy settings to be provided
 2. At the time of installation or first usage and updates that change the
     privacy settings options, the software  referred 
     to in paragraph 1 shall inform the end-user about the privacy settings
-    options and the way the end-user may use them. The software shall offer the 
+    options and/or the way the end-user may use them. The software shall offer the 
     end-user the choice to be reminded about the privacy settings options.
 
 2a. The software referred to in paragraph 1 shall provide in a clear manner easy ways
@@ -595,7 +607,7 @@ Unsolicited and direct marketing communications
     persons unless they have given their consent.
 
 2. Notwithstanding paragraph 1, where a natural or legal person obtains contact details for electronic message
-    from end-users who are natural persons, in the context of the sale of a product or a service, in accordance
+    from end-users who are natural persons, in the context of the purchase of a product or a service, in accordance
     with Regulation (EU) 2016/679, that natural or legal person may use these 
     contact details for direct marketing of its own similar products or services only if
     such end-users are clearly and distinctly given the opportunity to object, free of charge
@@ -604,7 +616,7 @@ Unsolicited and direct marketing communications
     initially refused that use, each time when a natural or legal persons sends a message to that 
     end-user for the purpose of direct marketing.
 
-2a. Member States may provide by law a period of time, after the sale of the product or
+2a. Member States may provide by law a set period of time, after the sale of the product or
     service occurred, that within which a natural or legal person may use contact details 
     of the end-user who is a natural person for direct marketing purposes, as provided for in paragraph 2.
 
@@ -667,10 +679,14 @@ Independent supervisory authorities
     shall be exercised with regard to end-users.
 
 1a. Member Sates shall entrust the monitoring of the application of Chapter III of this
-    Regulation to the supervisory authorities referred to in paragraph 1 of this Article or
-    to other supervisory authorities having an equivalent level of independence.
+    Regulation to the supervisory authority or authorities referred to in paragraph 1 of this Article or
+    to another supervisory authority or other supervisory authorities having an equivalent level of independence.
 
-1aa. The supervisory authorities referred to in paragraphs 1 and 1a shall have the power
+1aa. Notwithstanding paragraph 1a, Member States may entrust the monitoring of the
+    application of Articles 12 to 14 of this Regulation to another supervisory authority or
+    other supervisory authorities having the appropriate expertise.
+
+1ab. The supervisory authorities referred to in paragraphs 1 to 1aa shall have the power
     to provide remedies pursuant to article 21(1) and to impose administrative fines
     pursuant to article 23.
 
@@ -678,7 +694,7 @@ Independent supervisory authorities
     application of this Regulation in a Member State, such authorities shall cooperate
     with each other. 
 
-2. The supervisory authorities referred to in paragraphs 1 and 1a shall cooperate
+2. The supervisory authorities referred to in paragraphs 1 to 1aa shall cooperate
     whenever appropriate with national regulatory authorities established pursuant to the
     [Directive Establishing the European Electronic Communications Code].
 
