--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -256,10 +256,10 @@ Permitted processing of electronic communications data
     [Directive establishing the European Electronic Communications Code] or
     Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
-(b) it is necessary for performance of the contract to which the end-user is party,
-    more in particular if for billing, calculating interconnection payments, detecting or
-    stopping fraudulent, or abusive use of, or subscription to, electronic communications
-    services; or
+(b) it is necessary for calculating and billing interconnection payments or for the
+    performance of the contract to which the end-user is party, more in particular if for 
+    billing, detecting or stopping fraudulent, or abusive use of, or subscription to, 
+    electronic communications services; or
 
 (c) the end-user concerned has given consent to the processing of 
     communications metadata for one or more specified purposes, including for the
@@ -270,23 +270,58 @@ Permitted processing of electronic communications data
 (d) it is necessary to protect the vital interest of a natural person, in the case of emergency,
     upon request of a competent authority, in accordance with Union or Member State law; or
 
-(e) it is necessary for the purpose of statistical counting, provided:
-    - that the processing is limited to electronic communications meta-data
-    that constitutes location data that is pseudonymised, 
-    - the processing could not be carried out by
-    processing information that is made anonymous, and the location data is erased or made
-    anonymous when it is no longer needed to fulfil the purpose, and 
-    - the location data is not used to determine the nature or
-    characteristics of an end-user or to build a profile of an end-user.
-
-(f) it is necessary for statistical counting, other than based on electronic communications
-    metadata that constitute location data or for scientific research,  provided it is based on
+(f) it is necessary for statistical counting, or for scientific research purposes, provided it is based on
     Union or Member State law which shall be proportionate to the aim pursued and
     provide for specific measures, including encryption and pseudonymisation, to
     safeguard fundamental rights and the interest of the end-users. Processing of
     electronic communications metadata under this point shall be done in accordance
     with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
     (EU) 2016/679.
+    
+2a. Where the processing for a purpose other than that for which the electronic
+    communications metadata have been collected is not based on the end-user's consent
+    or on a Union or Member State law which constitutes a necessary and proportionate
+    measure in a democratic society to safeguard the objectives referred to in Article 11 ,
+    the provider shall, in order to ascertain whether processing for another purpose is
+    compatible with the purpose for which the electronic communications data are
+    initially collected, take into account, inter alia:
+
+(a) any link between the purposes for which the electronic communications metadata
+    have been collected and the purposes of the intended further processing;
+
+(b) the context in which the electronic communications metadata have been collected, in
+    particular regarding the relationship between end-users concerned and the provider;
+
+(c) the nature of the electronic communications metadata, in particular where such data
+    could reveal categories of data, pursuant to Article 9 of Regulation (EU) 2016/679;
+
+(d) the possible consequences of the intended further processing for end-users;
+
+(e) the existence of appropriate safeguards.
+    
+Such processing, if considered compatible, may only take place, provided that:
+    - the processing could not be carried out by processing information that is made
+    anonymous, and electronic communications metadata is erased or made anonymous
+    as soon as it is no longer needed to fulfil the purpose, and
+    - the processing is limited to electronic communications metadata that is
+    pseudonymised,
+    - the electronic communications metadata is not used to determine the nature or
+    characteristics of an end-user or to build a profile of an end-user.
+
+2aa. For the purposes of paragraph 2a, the providers of electronic
+    communications networks and services shall:
+
+(b) not share such data with third parties, unless it is made anonymous;
+
+(c) prior to the processing carry out an assessment of the impact of the envisaged
+    processing operations on the protection of electronic communications data and
+    consult the supervisory authority. Points (2) and (3) of Article 36(2) and (3) of
+    Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority;
+    and
+
+(d) inform the end-user of specific processing on the basis of paragraph 2a and
+    give the right to object to such processing free of charge, at any time, and in an
+    easy and effective manner.
 
 3. Without prejudice to paragraph 1, providers of the electronic communications networks and
     services shall be permitted to process electronic communications content only:
@@ -304,23 +339,6 @@ Permitted processing of electronic communications data
     operations on the protection of electronic communications data and
     consulted the supervisory authority. Article 36(2) and (3) of Regulation
     (EU) 2016/679 shall apply to the consultation of the supervisory authority.
-
-3a. For the purposes of point (e) of paragraph 2, the providers of electronic
-    communications networks and services shall:
-
-(a) exclude electronic communications metadata that constitue location data that reveal special categories of
-    personal data pursuant to Article 9 of Regulation (EU) 2016/679 from processing;
-
-(b) not share such data with third parties, unless it is made anonymous;
-
-(c) prior to the processing carry out an assessment of the impact of the envisaged
-    processing operations on the protection of electronic communications data and
-    consult the supervisory authority. Points (2) and (3) of Article 36(2) and (3) of
-    Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority;
-    and
-
-(d) inform the end-user of specific processing on the basis of point (e) of paragraph 2 and
-    give the right to object to such processing.
 
 4. A third party on behalf of a provider of electronic communications network or
     services shall be permitted to process electronic communications data in accordance
@@ -413,32 +431,6 @@ Protection of end-users' terminal equipment information
 4. [The Commission shall be empowered to adopt delegated acts in accordance with
     Article 25 determining the information to be presented by the standardized icon and
     the procedures for providing standardized icons.]
-
-```
-Article 10
-Information and options for privacy settings to be provided
-```
-1. Software placed on the market permitting electronic communications, including the
-    retrieval and presentation of information on the internet, shall offer the option to
-    prevent any other parties than the end-user from storing information on the terminal equipment of an end-
-    user or processing information already stored on that equipment.
-
-2. At the time of installation or first usage and updates that change the
-    privacy settings options, the software  referred 
-    to in paragraph 1 shall inform the end-user about the privacy settings
-    options and/or the way the end-user may use them. The software shall offer the 
-    end-user the choice to be reminded about the privacy settings options.
-
-2a. The software referred to in paragraph 1 shall provide in a clear manner easy ways
-    for end-users to change the privacy setting at any
-    time during the use.
-
-3. In the case of software which has already been installed on [the date of entry into application], the
-    requirements under paragraphs 1 and 2 shall be complied with at the time of the first
-    update of the software.
-
-4. This provision shall not apply to software that is no longer supported at the time of
-    entry into application of this Regulation
 
 ```
 Article 11
