--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -60,8 +60,12 @@ Material Scope
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
 
-(e) electronic communications content processed by the end-users after receipt, or by a
-    third party entrusted by them to record, store or otherwise process such data.
+(e) electronic communications content processed by the end-users concerned after receipt, or by a
+    third party entrusted by them to record, store or otherwise process their electronic communications content;
+
+(f) electronic communications metadata processed by the end-users concerned or by a
+    third party entrusted by them to record, store or otherwise process their electronic
+    communications metadata on their behalf
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 00/0000 [new Regulation
@@ -101,9 +105,8 @@ Territorial scope and representative
     a person using electronic communications services to send direct
     marketing communications or makes use of processing and storage capabilities or
     collects information processed by or emitted by or stored in the end-users’ terminal
-    equipment is not established in the
+    equipment is not established in the Union it shall designate in writing a representative in the Union.
 
-    Union it shall designate in writing a representative in the Union.
 2a. The requirements laid down in paragraph 2 shall not apply if activities listed in
     paragraph 1 are occasional and are unlikely to result in a risk to the fundamental
     rights of end-users taking into account the nature, context, scope and purpose of
@@ -252,14 +255,14 @@ Permitted processing of electronic communications data
 (a) it is necessary for the purposes of network management or network optimisation, 
     provided that the purpose or purposes concerned could not be fulfilled by processing
     information that is made anonymous and for the duration necessary for that purpose,
-    or to meet mandatory quality of service requirements pursuant to
+    or to meet technical quality of service requirements pursuant to
     [Directive establishing the European Electronic Communications Code] or
     Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
 (b) it is necessary for calculating and billing interconnection payments or for the
     performance of the contract to which the end-user is party, more in particular if for 
-    billing, detecting or stopping fraudulent, or abusive use of, or subscription to, 
-    electronic communications services; or
+    billing or if it is necessary for, detecting or stopping fraudulent, or abusive use of,
+    or subscription to, electronic communications services; or
 
 (c) the end-user concerned has given consent to the processing of 
     communications metadata for one or more specified purposes, including for the
@@ -270,7 +273,7 @@ Permitted processing of electronic communications data
 (d) it is necessary to protect the vital interest of a natural person, in the case of emergency,
     upon request of a competent authority, in accordance with Union or Member State law; or
 
-(f) it is necessary for statistical counting, or for scientific research purposes, provided it is based on
+(f) it is necessary for statistical purposes, or for scientific research purposes, provided it is based on
     Union or Member State law which shall be proportionate to the aim pursued and
     provide for specific measures, including encryption and pseudonymisation, to
     safeguard fundamental rights and the interest of the end-users. Processing of
@@ -293,7 +296,7 @@ Permitted processing of electronic communications data
     particular regarding the relationship between end-users concerned and the provider;
 
 (c) the nature of the electronic communications metadata, in particular where such data
-    could reveal categories of data, pursuant to Article 9 of Regulation (EU) 2016/679;
+    could reveal categories of data, pursuant to Article 9 or 10 of Regulation (EU) 2016/679;
 
 (d) the possible consequences of the intended further processing for end-users;
 
@@ -320,7 +323,7 @@ Such processing, if considered compatible, may only take place, provided that:
     and
 
 (d) inform the end-user of specific processing on the basis of paragraph 2a and
-    give the right to object to such processing free of charge, at any time, and in an
+    of the right to object to such processing free of charge, at any time, and in an
     easy and effective manner.
 
 3. Without prejudice to paragraph 1, providers of the electronic communications networks and
@@ -393,9 +396,9 @@ Protection of end-users' terminal equipment information
     prevent fraud or detect technical faults for the duration necessary for that purpose;
     or
 
-(e) it is necessary for a security update provided that:
-    (i) security updates are necessary and do not in any way change the privacy settings chosen by the
-    end-user are not changed,
+(e) it is necessary for a software update provided that:
+    (i) such update is necessary for security reasons and dos not in any way change the privacy settings chosen by the
+    end-user,
     (ii) the end-user is informed in advance each time an update is being installed, and
     (iii) the end-user is given the possibility to postpone or turn off the automatic 
     installation of these updates; or 
