--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -37,9 +37,6 @@ Material Scope
 
 (b) end-users' terminal equipment information.
 
-(c) the placing on the market of software permitting electronic communications,
-    including the retrieval and presentation of information on the internet;
-
 (d) the offering of a publicly available directory of end-users of electonic communications
     services;
 
@@ -65,7 +62,7 @@ Material Scope
 
 (f) electronic communications metadata processed by the end-users concerned or by a
     third party entrusted by them to record, store or otherwise process their electronic
-    communications metadata on their behalf
+    communications metadata.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 00/0000 [new Regulation
@@ -249,18 +246,22 @@ Permitted processing of electronic communications data
     networks and services, or detect technical faults and/or errors and/or security risks and/or
     attacks in the transmission of electronic communications, for the duration necessary for that purpose.
 
+(c) it is necessary to detect or prevent security risks and/or attacks on end-users’
+    terminal equipment.
+
 2. Without prejudice to paragraph 1, providers of electronic communications networks and
     services shall be permitted to process electronic communications metadata only if:
 
-(a) it is necessary for the purposes of network management or network optimisation, 
+(a) it is necessary for the purposes of network management or network optimisation, and
+    for the duration necessary for that purpose,
     provided that the purpose or purposes concerned could not be fulfilled by processing
-    information that is made anonymous and for the duration necessary for that purpose,
+    information that is made anonymous,
     or to meet technical quality of service requirements pursuant to
     [Directive establishing the European Electronic Communications Code] or
     Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
 (b) it is necessary for calculating and billing interconnection payments or for the
-    performance of the contract to which the end-user is party, more in particular if for 
+    performance of an electronic communications service contract to which the end-user is party, more in particular if for 
     billing or if it is necessary for, detecting or stopping fraudulent, or abusive use of,
     or subscription to, electronic communications services; or
 
@@ -282,7 +283,7 @@ Permitted processing of electronic communications data
     (EU) 2016/679.
     
 2a. Where the processing for a purpose other than that for which the electronic
-    communications metadata have been collected is not based on the end-user's consent
+    communications metadata have been collected under paragraphs 1 and 2 is not based on the end-user's consent
     or on a Union or Member State law which constitutes a necessary and proportionate
     measure in a democratic society to safeguard the objectives referred to in Article 11 ,
     the provider shall, in order to ascertain whether processing for another purpose is
@@ -317,14 +318,15 @@ Such processing, if considered compatible, may only take place, provided that:
 (b) not share such data with third parties, unless it is made anonymous;
 
 (c) prior to the processing carry out an assessment of the impact of the envisaged
-    processing operations on the protection of electronic communications data and
-    consult the supervisory authority. Points (2) and (3) of Article 36(2) and (3) of
-    Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority;
-    and
+    processing operations on the protection of electronic communications data in
+    accordance with Article 35 of Regulation (EU) 2016/679, which may result in the
+    prior consultation of the supervisory authority in accordance with Article 36(1)
+    to (3) of Regulation (EU) 2016/679; and
 
 (d) inform the end-user of specific processing on the basis of paragraph 2a and
     of the right to object to such processing free of charge, at any time, and in an
-    easy and effective manner.
+    easy and effective manner. If the end-user objects, the electronic communications
+    metadata shall no longer be processed for such purposes.
 
 3. Without prejudice to paragraph 1, providers of the electronic communications networks and
     services shall be permitted to process electronic communications content only:
@@ -352,7 +354,7 @@ Such processing, if considered compatible, may only take place, provided that:
 Article 7
 Storage and erasure of electronic communications data
 ```
-1. Without prejudice to point (b) of Article 6(1) and of Article 6(3),
+1. Without prejudice to points (b) and (c) of Article 6(1) and of Article 6(3),
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
     communication content by the intended recipient or recipients. Such data may be recorded, stored or otherwise
@@ -360,7 +362,7 @@ Storage and erasure of electronic communications data
     record, store or otherwise process such data. Such processing shall take place in
     accordance with Regulation (EU) 2016/679.
 
-2. Without prejudice to point (b) of Article 6(1) and points (a), (d) to (f) of Article 6(2),
+2. Without prejudice to points (b) and (c) of Article 6(1), points (a), (c), (d) and (f) of Article 6(2) and Article 6(2a),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
@@ -403,6 +405,10 @@ Protection of end-users' terminal equipment information
     (iii) the end-user is given the possibility to postpone or turn off the automatic 
     installation of these updates; or 
     
+(f) it is necessary to locate terminal equipment when an end-user makes an emergency
+    communication either to the single European emergency number ‘112’ or a national
+    emergency number, in accordance with Article 13(3).
+    
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
 	following grounds:
@@ -431,9 +437,10 @@ Protection of end-users' terminal equipment information
 3. The information to be provided pursuant to paragraph 2a may be provided
     in combination with standardized icons in order to give a meaningful overview of the
     collection in an easily visible, intelligible and clearly legible manner.
-4. [The Commission shall be empowered to adopt delegated acts in accordance with
+
+4. The Commission shall be empowered to adopt delegated acts in accordance with
     Article 25 determining the information to be presented by the standardized icon and
-    the procedures for providing standardized icons.]
+    the procedures for providing standardized icons.
 
 ```
 Article 11
@@ -512,7 +519,7 @@ of incoming calls and to provide access to emeregency services
     public safety answering points, for the purpose of responding to such
     communications.
 
-1a. Notwithstanding Article 8(1),regardless whether the called end-user rejects incoming calls where the presentation
+1a. Regardless whether the called end-user rejects incoming calls where the presentation
     of the calling line identification has been prevented by the calling end-user, providers
     of number-based interpersonal communications services shall override this choice,
     where technically possible, when the calling end-user is an organisation dealing with
@@ -525,7 +532,7 @@ of incoming calls and to provide access to emeregency services
     elimination of the presentation of the calling line identification on a temporary basis,
     where end-users request the tracing of unwanted, malicious or nuisance calls.
 
-3. Regardless of whether the end-user has prevented access to the terminal equipment’s
+3. Notwithstanding Article 8(1), regardless of whether the end-user has prevented access to the terminal equipment’s
     Global Navigation Satellite Systems (GNSS) capabilities or other types of
     terminal equipment based location data through the terminal
     equipment settings, when a call is made to emergency services, such settings may not
@@ -665,31 +672,17 @@ Independent supervisory authorities
 ```
 0. Each Member State shall provide for one or more independent public authorities to
     be responsible for monitoring the application of this Regulation (‘supervisory
-    authorities’), in accordance with paragraphs 1 to 1as of this Article.
+    authorities’).
 
-1. The independent supervisory authority or authorities responsible for monitoring the
-    application of Regulation (EU) 2016/679 shall also be responsible for monitoring the
-    application of Chapter II of this Regulation. Without prejudice to article 19, Chapter VI and VII of Regulation (EU) 2016/679
-    shall apply _mutatis mutandis_. The tasks and powers of the supervisory authorities
-    shall be exercised with regard to end-users.
-
-1a. Member Sates shall entrust the monitoring of the application of Chapter III of this
-    Regulation to the supervisory authority or authorities referred to in paragraph 1 of this Article or
-    to another supervisory authority or other supervisory authorities having an equivalent level of independence.
-
-1aa. Notwithstanding paragraph 1a, Member States may entrust the monitoring of the
-    application of Articles 12 to 14 of this Regulation to another supervisory authority or
-    other supervisory authorities having the appropriate expertise.
-
-1ab. The supervisory authorities referred to in paragraphs 1 to 1aa shall have the power
-    to provide remedies pursuant to article 21(1) and to impose administrative fines
+1ab. The supervisory authorities referred to in paragraph 0 shall have the power to 
+    provide remedies pursuant to article 21(1) and to impose administrative fines 
     pursuant to article 23.
 
 1b. Where more than one supervisory authority is responsible for monitoring the
     application of this Regulation in a Member State, such authorities shall cooperate
-    with each other. 
+    with each other.
 
-2. The supervisory authorities referred to in paragraphs 1 to 1aa shall cooperate
+2. The supervisory authorities referred to in paragraph 0 shall cooperate
     whenever appropriate with national regulatory authorities established pursuant to the
     [Directive Establishing the European Electronic Communications Code].
 
@@ -731,10 +724,10 @@ European Data Protection Board
 
 (f) promote the cooperation and effective bilateral and multilateral exchange of
     information and best practices between the supervisory authorities referred to in
-    paragraph 1 of Article 18;
+    paragraph 0 of Article 18;
 
 (g) promote common training programmes and facilitate personnel exchanges between
-    the supervisory authorities referred to in paragraph 1 of Article 18 and, where
+    the supervisory authorities referred to in paragraph 0 of Article 18 and, where
     appropriate, with the supervisory authorities of third countries or with international
     organisations;
 
@@ -744,7 +737,7 @@ European Data Protection Board
     world wide;
 
 (i) maintain a publicly accessible electronic register of decisions taken by supervisory
-    authorities referred to in paragraph 1 o fArticle 18 and courts on issues handled in
+    authorities referred to in paragraph 0 o fArticle 18 and courts on issues handled in
     the consistency mechanism.
 
 3. Where the Commission requests advice from the Board, it may indicate a time limit,
@@ -767,7 +760,7 @@ Cooperation and consistency procedures
 
 2. For the purpose laid down in paragraph 1 and without prejudice to article 19, 
     the supervisory authorities designated in accordance with
-    Article 18(1) shall cooperate with each
+    Article 18(0) shall cooperate with each
     other and the Commission in accordance with Chapter VII of Regulation (EU) 2016/ 679
     regarding the matters covered by Chapter II of this Regulation.
 
@@ -808,17 +801,11 @@ General conditions for imposing administrative fines
     to infringements of this Regulation.
 2. Infringements of the following provisions of this Regulation shall, in accordance
     with paragraph 1, be subject to administrative fines up to EUR 10 000 000, or in the
+    case of an undertaking, up to 2 % of the total worldwide annual turnover of the
+    preceding financial year, whichever is higher:
 
-
-```
-case of an undertaking, up to 2 % of the total worldwide annual turnover of the
-preceding financial year, whichever is higher:
-```
 (a) the obligations of any legal or natural person who process electronic communications
     data pursuant to Article 8;
-
-(b) the obligations of the provider of software enabling electronic communications,
-    pursuant to Article 10;
 
 (c) the obligations of the providers of publicly available directories pursuant to Article 15;
 
@@ -957,7 +944,7 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. It shall apply from [one year from the date of entry into force of this
+2. It shall apply from [24 months from the date of entry into force of this
     Regulation].
 
 
